@@ -13,6 +13,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #19105: pprint now more efficiently uses free space at the right.
+
 - Issue #14910: Add allow_abbrev parameter to argparse.ArgumentParser. Patch by
   Jonathan Paugh, Steven Bethard, paul j3 and Daniel Eriksson.
 
